# drape

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  cliff.toml  justfile  pyproject.toml  release.just  setup.py
.github/workflows/: codacy.yml  release.yml
.project-kit/: _lib.just  answers.lock.json  build.just  clean.just  cliff.toml  db.just  deploy.just  docs.just  preview.just  release.just  setup.just  test.just
.project-kit/hooks/: pre-commit  pre-push
.project-kit/scripts/: deploy-cloudflare.py  deploy-custom.py  deploy-ghcr.py  deploy-homelab.py  deploy-pypi.py  doctor.py  preview-pr.py  release.py
docs/: HANDOFF.md  PRE_RELEASE_CHECKLIST.md  PRODUCTION_READINESS.md  PUBLISHING.md  README.md  ROADMAP.md  SETUP.md  architecture.md
docs/projects/roadmap-followup/: README.md
scripts/: example.py  install-claude-hook.sh  release.sh
src/drape/: __init__.py  audit.py  cli.py  formats.py  masker.py  patterns.py  settings.py  sops.py
src/drape/hook/: __init__.py  __main__.py
tests/: __init__.py  test_audit.py  test_cli.py  test_formats.py  test_hook.py  test_masker.py  test_patterns.py  test_sops.py
