[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drape"
version = "0.2.0"
description = "Mask secrets in .env / SOPS / YAML / JSON / TOML files for safe LLM inspection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Will Pike", email = "will@khanpikehome.com" }]
keywords = ["environment", "secrets", "masking", "LLM", "Claude", "security", "sops"]
dependencies = [
    "detect-secrets>=1.5.0",
    "loguru>=0.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/pike00/drape"
Repository = "https://github.com/pike00/drape.git"
Issues = "https://github.com/pike00/drape/issues"
Documentation = "https://github.com/pike00/drape/blob/main/docs/"
Roadmap = "https://github.com/pike00/drape/blob/main/docs/ROADMAP.md"
Publishing = "https://github.com/pike00/drape/blob/main/docs/PUBLISHING.md"

[project.scripts]
drape = "drape.cli:main"
drape-hook = "drape.hook:main"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
toml = ["tomli>=2.0; python_version<'3.11'"]
all = ["PyYAML>=6.0", "tomli>=2.0; python_version<'3.11'"]

[tool.hatch.build.targets.wheel]
packages = ["src/drape"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "PyYAML>=6.0",
    "tomli>=2.0; python_version<'3.11'",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=drape --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["drape"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]
