[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "drape"
version = "0.2.0"
description = "Mask secrets in .env / SOPS / YAML / JSON / TOML files for safe LLM inspection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Will Pike", email = "pypi-public@wpike.com" }]
maintainers = [{ name = "Will Pike", email = "pypi-public@wpike.com" }]
keywords = [
    "secrets",
    "masking",
    "redaction",
    "environment",
    "dotenv",
    "sops",
    "llm",
    "claude",
    "claude-code",
    "ai-safety",
    "security",
    "detect-secrets",
]
dependencies = [
    "detect-secrets>=1.5.0",
    "loguru>=0.7",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.11.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/pike00/drape"
Repository = "https://github.com/pike00/drape.git"
Issues = "https://github.com/pike00/drape/issues"
Changelog = "https://github.com/pike00/drape/blob/main/CHANGELOG.md"
Documentation = "https://github.com/pike00/drape/blob/main/docs/"
Roadmap = "https://github.com/pike00/drape/blob/main/docs/ROADMAP.md"
Publishing = "https://github.com/pike00/drape/blob/main/docs/PUBLISHING.md"

[project.scripts]
drape = "drape.cli:main"
drape-hook = "drape.hook:main"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
toml = []
all = ["PyYAML>=6.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/drape"]

[tool.hatch.build.targets.sdist]
include = [
    "src/drape",
    "tests",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "LICENSE",
    "pyproject.toml",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.0",
    "PyYAML>=6.0",
    "black>=26.3.1",
    "mypy>=1.0",
    "ruff>=0.1",
    "twine>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=drape --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["drape"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100
extend-exclude = "\\.project-kit"
target-version = ["py312"]

[tool.ruff]
# .project-kit/ is vendored project-kit tooling (regenerated on refresh); do not lint it.
extend-exclude = [".project-kit"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.release-kit]
install_command_template = "uv tool install drape=={version}"
voice_notes = """\
precise, factual, no marketing language, no emoji, no exclamation points. \
Write as if reviewers from a security-minded shop will read it.\
"""
extra_instructions = ""
model = "deepseek-v4-pro-cloud"
base_url = "http://127.0.0.1:4000"
reasoning_effort = "low"
changelog_path = "CHANGELOG.md"

# `just version` resolves prod from PyPI (latest published release).
prod_source = "pypi"
prod_pypi_name = "drape"
